--- a/www/imports/mapPage/color/legend.css
+++ b/www/imports/mapPage/color/legend.css
@@ -26,6 +26,7 @@
 
 .axis {
     word-wrap: break-word;
+    word-break: break-all;
 }
 
 #low-both {
